flexbox align-items-center fix

--- a/useful/scss/flexbox/flexbox.scss
+++ b/useful/scss/flexbox/flexbox.scss
@@ -123,6 +123,7 @@
 .align {
     &-items {
         &-center {
+            margin: 0 auto;
             align-items: center;
         }
     }
